# EIP-MMDPP

./: .env.example  .env.test  .gitignore  Dockerfile  README.md  alembic.ini  docker-compose.test.yml  docker-compose.yml  env.example  manage.sh  pyproject.toml
.claude/: settings.json
alembic/: env.py
alembic/versions/: 0001_initial_schemas.py  0002_knowledge_restructure.py  0003_unique_source_file_hash.py  0004_ingest_v2_and_chunk_links.py  0005_neo4j_qdrant_graphrag.py  0006_trusted_data.py  0007_graphrag_report_refresh.py  0008_drop_custom_graphrag_tables.py  0009_add_document_metadata.py  0010_add_translated_text.py
app/: config.py  main.py
app/db/: session.py
app/models/: __init__.py  auth.py  base.py  governance.py  ingest.py  memory.py  retrieval.py  trusted_data.py
app/schemas/: common.py  governance.py  graph_store.py  image_store.py  memory.py  retrieval.py  sources.py  text_store.py  trusted_data.py
app/services/: canonicalization.py  chunking.py  cognee_service.py  docling_client.py  docling_graph_service.py  document_analysis.py  embedding.py  extraction.py  graph.py  graphrag_bridge.py  graphrag_config.py  graphrag_prompts.py  graphrag_service.py  neo4j_graph.py  ner.py  office_image_extractor.py  ontology_templates.py  qdrant_store.py  reranker.py  storage.py  translation.py
app/workers/: _db.py  celery_app.py  graphrag_tasks.py  pipeline.py  trusted_data_tasks.py  watcher.py
docker/docling/: Dockerfile  requirements-stable.txt  requirements.txt
docker/docling-graph/: Dockerfile  requirements.txt
docker/neo4j/: init.cypher
docker/postgres/: Dockerfile
docs/plans/: 2026-03-13-quality-pass-design.md  2026-03-13-quality-pass-plan.md  2026-03-13-quality-pass-plan.md.tasks.json  2026-03-13-simplification-plan.md  2026-03-13-simplification-plan.md.tasks.json  2026-03-14-docling-graph-integration-design.md  2026-03-14-docling-graph-integration-plan.md  2026-03-14-docling-graph-integration-plan.md.tasks.json  2026-03-15-docling-viewer-design.md  2026-03-15-graph-visualization-design.md  2026-03-15-graph-viz-docling-viewer-plan.md  2026-03-15-graph-viz-docling-viewer-plan.md.tasks.json  2026-03-16-docling-viewer-quality-design.md  2026-03-16-docling-viewer-quality-plan.md  2026-03-16-docling-viewer-quality-plan.md.tasks.json  2026-03-16-ontology-extraction-ner-removal-design.md  2026-03-16-ontology-extraction-ner-removal-plan.md  2026-03-16-ontology-extraction-ner-removal-plan.md.tasks.json  2026-03-17-docling-viewer-design.md  2026-03-17-docling-viewer-plan.md  2026-03-17-docling-viewer-plan.md.tasks.json
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  styles.css
ontology/: base.yaml  base_v1.yaml  ontology.yaml
reports/: coverage_integration.xml  coverage_unit.xml  junit_integration.xml  junit_unit.xml  summary.txt
scripts/: init_qdrant_collections.py  migrate_age_to_neo4j.py  migrate_pgvector_to_qdrant.py  run_tests.sh  seed_ontology.py
tests/: conftest.py
tests/e2e/: test_full_pipeline.py
tests/fixtures/: generate.py
tests/integration/: test_agent_api.py  test_agent_cognee.py  test_governance_api.py  test_graph_store_api.py  test_health.py  test_image_store_api.py  test_memory_api.py  test_pipeline_graph.py  test_retrieval_api.py  test_sources_api.py  test_text_store_api.py  test_trusted_data_api.py  test_unified_query_api.py
tests/pipeline/: test_pipeline_chain.py
tests/property/: test_abac.py
tests/unit/: test_agent.py  test_canonicalization.py  test_chunking.py  test_cognee_service.py  test_config.py  test_docling_client.py  test_docling_graph_client.py  test_docling_graph_service.py  test_ner.py  (+32 more)
(+68 files in other folders)
